# Foster.Audio

./: Foster.Audio.sln  LICENSE  README.md  global.json
.github/workflows/: build-libs.yml
Foster.Audio/: Audio.cs  AudioListener.cs  Foster.Audio.csproj  Platform.cs  Sound.cs  SoundCone.cs  SoundGroup.cs  SoundInstance.cs
Foster.Audio/Enums/: AudioFormat.cs  SoundAttenuationModel.cs  SoundLoadingMethod.cs  SoundPositioning.cs
Platform/: CMakeLists.txt  README.md
Platform/include/: foster_platform.h
Platform/libs/osx/: libFosterAudioPlatform.dylib
Platform/libs/x64/: FosterAudioPlatform.exp  FosterAudioPlatform.lib
Platform/src/: foster_audio.c  foster_audio.h  foster_internal.h  foster_platform.c
Samples/AudioVisualizer/: AudioVisualizer.csproj  Program.cs  README.md
